add notification settings

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
-    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none">设置</div>
+    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none"><span>设置</span><a id="more-setting" href="./setting.html" style="margin-left: 15px; font-size: 14px" target="_blank">更多设置</a></div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">直播相关</div>
     <div class="host" style="margin: 0 25px;height: 200px;">
         <div class="button-host" id="btn1">
