--- a/readme.html
+++ b/readme.html
@@ -32,6 +32,7 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.11 特性：</h3>
     <ul>
         <li>现在可以为up单独设置通知偏好了（包括开播、投稿、动态）。</li>
+        <li>视频页加入了Hi-Res音频缓存的功能。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
@@ -171,6 +172,7 @@
     <h3>ver 5.11</h3>
     <ul>
         <li>现在可以为up单独设置通知偏好了（包括开播、投稿、动态）。</li>
+        <li>视频页加入了Hi-Res音频缓存的功能。</li>
         <li>一些其他改进。</li>
     </ul>
     <h3>ver 5.10</h3>
