--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,8 @@
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
-    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none"><span>设置</span><a id="more-setting" href="./setting.html" style="margin-left: 15px; font-size: 14px" target="_blank">更多设置</a></div>
+    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none"><span>设置</span><a id="more-setting" href="./setting.html" style="margin-left: 15px; font-size: 14px" target="_blank"><span>更多设置</span><span style="position: relative; top: 4px;"><svg width="10" height="10" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" class="right-arrow" style="transform: rotate(90deg);"><rect x="10" y="10" rx="5" ry="5" width="35" height="10" style="transform: rotate(45deg); transform-origin: center;"/><rect x="10" y="30" rx="5" ry="5" width="35" height="10" style="transform: rotate(135deg); transform-origin: center;"/></svg></span>
+    </a></div>
     <div style="font-size: 16px; padding-top: 10px; padding-left: 25px; user-select: none">直播相关</div>
     <div class="host" style="margin: 0 25px;height: 200px;">
         <div class="button-host" id="btn1">
