add up bespoke emoji at video and dynamic pages

--- a/setting.html
+++ b/setting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="current-version" content="5.10">
-    <title>rua豹器 通知设置</title>
+    <title>rua豹器 通知偏好</title>
     <link href="css/readme.min.css" type="text/css" rel="stylesheet">
     <link href="css/setting.min.css" type="text/css" rel="stylesheet">
     <link href="css/popupbtn.min.css" type="text/css" rel="stylesheet">
@@ -15,7 +15,7 @@
         <div id="rua-icon" style="height: 100px; width:100px;">
             <img src="./images/svga/13.svg" frame="13" height="100%" width="100%">
         </div>
-        <b>通知设置</b>
+        <b>通知偏好</b>
     </div>
 
     <div id="rua-nav" style="display: flex; opacity: 1;">
