--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.10">
+    <meta name="current-version" content="5.11">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
         <img src="./images/svga/13.svg" frame="13" height="100%" width="100%">
     </div>
     <div id="rua-nav">
-        <a href="./setting.html">通知设置</a>
+        <a href="notifySetting.html">通知设置</a>
         <a goto="MV3">Manifest V3</a>
         <a goto="new-features">新特性</a>
         <a goto="functions">已有的功能</a>
