--- a/readme.html
+++ b/readme.html
@@ -3,7 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="current-version" content="5.11">
+    <meta name="current-version" content="5.13">
+    <meta name="current-version-mv2" content="5.10.3">
     <title>rua豹器 使用说明</title>
     <link href="./css/readme.min.css" type="text/css" rel="stylesheet">
 </head>
@@ -25,14 +26,13 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.11来啦 <br>
+        rua豹器5.13来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.11 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.13 特性：</h3>
     <ul>
-        <li>现在可以为up单独设置通知偏好了（包括开播、投稿、动态）。</li>
-        <li>视频页加入了Hi-Res音频缓存的功能。</li>
+        <li>现在评论区和移动端一样可以发送up大表情了。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
@@ -169,6 +169,11 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.13</h3>
+    <ul>
+        <li>现在评论区和移动端一样可以发送up大表情了。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.11</h3>
     <ul>
         <li>现在可以为up单独设置通知偏好了（包括开播、投稿、动态）。</li>
