--- a/readme.html
+++ b/readme.html
@@ -33,6 +33,7 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.13 特性：</h3>
     <ul>
         <li>现在评论区和移动端一样可以发送up大表情了。</li>
+        <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
