--- a/readme.html
+++ b/readme.html
@@ -33,7 +33,11 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.13 特性：</h3>
     <ul>
         <li>现在评论区和移动端一样可以发送up大表情了。</li>
-        <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
+        <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。</li>
+        <ul>
+            <li>目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
+            <li>注：插件的深色模式优先级高于直播间-"实验室"中的深色模式。所以在插件的深色模式开启时或者设置为跟随系统且系统处于深色模式时，直播间-"实验室"中的深色模式开关将失效。</li>
+        </ul>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
@@ -52,8 +56,9 @@
             注：音轨音质保存默认会选择视频提供的最佳音频。<br>
         </li>
         <li>快速录制直播片段 (beta)<br>支持录制重放，默认保留开始录制前5分钟片段，可在设置中设置重放时长</li>
-        <li>增加了新版UI主页分区隐藏的功能。</li>
-        <li>添加了音乐播放器页面的下载功能。</li>
+        <li>新版UI主页分区隐藏。</li>
+        <li>音乐播放器页面下载。</li>
+        <li>深色模式。</li>
     </ul>
     <h2 id="MV3">Manifest V3</h2>
     自5.10版开始rua豹器已开始转为Manifest V3扩展应用。
@@ -110,6 +115,7 @@
                     <li>大会员B币兑换</li>
                     <li>隐身进入直播间/增强隐身</li>
                     <li>直播录制</li>
+                    <li>深色模式</li>
                 </ul>
             </div>
         </div>
@@ -173,6 +179,7 @@
     <h3>ver 5.13</h3>
     <ul>
         <li>现在评论区和移动端一样可以发送up大表情了。</li>
+        <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
         <li>一些其他改进。</li>
     </ul>
     <h3>ver 5.11</h3>
