--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,8 @@
     </p>
     <h3 style="font-size: 28px" id="new-features">ver 5.13 特性：</h3>
     <ul>
-        <li>现在评论区和移动端一样可以发送up大表情了。</li>
+        <li>已为MV3加入"重启服务"功能，当通知推送不正常或延迟很大时可以尝试重启服务。MV2只需在扩展管理页面关闭扩展后再开启即可，此方法MV3无效。</li>
+        <li>现在评论区和移动端一样可以发送up大表情了。可在设置中开启/关闭，默认开启。如果遇到评论区表情区显示不正确或是不显示或者表情按钮无响应等问题在设置中关闭"up表情"后刷新页面即可。</li>
         <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。</li>
         <ul>
             <li>目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
@@ -59,6 +60,7 @@
         <li>新版UI主页分区隐藏。</li>
         <li>音乐播放器页面下载。</li>
         <li>深色模式。</li>
+        <li>评论区up表情包。</li>
     </ul>
     <h2 id="MV3">Manifest V3</h2>
     自5.10版开始rua豹器已开始转为Manifest V3扩展应用。
@@ -116,6 +118,8 @@
                     <li>隐身进入直播间/增强隐身</li>
                     <li>直播录制</li>
                     <li>深色模式</li>
+                    <li>评论区up表情包，显示不正常时关闭此选项即可修复。</li>
+                    <li>重启服务，遇到不推送、推送慢等问题可以重启服务来修复。</li>
                 </ul>
             </div>
         </div>
@@ -178,7 +182,8 @@
     <h2 id="version">版本记录</h2>
     <h3>ver 5.13</h3>
     <ul>
-        <li>现在评论区和移动端一样可以发送up大表情了。</li>
+        <li>已为MV3加入"重启服务"功能，当通知推送不正常或延迟很大时可以尝试重启服务。MV2只需在扩展管理页面关闭扩展后再开启即可，此方法MV3无效。</li>
+        <li>现在评论区和移动端一样可以发送up大表情了。可在设置中开启/关闭，默认开启。如果遇到评论区表情区显示不正确或是不显示或者表情按钮无响应等问题在设置中关闭"up表情"后刷新页面即可。</li>
         <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
         <li>一些其他改进。</li>
     </ul>
