--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,18 @@
 </div>
 <hr size="1" color="#aaa">
 <div class="setting">
-    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none"><span>设置</span><a id="more-setting" href="notifySetting.html" style="margin-left: 15px; font-size: 14px" target="_blank"><span>更多设置</span><span style="position: relative; top: 4px;"><svg width="10" height="10" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" class="right-arrow" style="transform: rotate(90deg);"><rect x="10" y="10" rx="5" ry="5" width="35" height="10" style="transform: rotate(45deg); transform-origin: center;"/><rect x="10" y="30" rx="5" ry="5" width="35" height="10" style="transform: rotate(135deg); transform-origin: center;"/></svg></span>
-    </a></div>
+    <div style="font-size: 20px; padding-top: 10px; padding-left: 15px; user-select: none">
+        <span>设置</span>
+        <a id="more-setting" class="a-link" href="notifySetting.html" target="_blank">
+            <span>更多设置</span>
+            <span style="position: relative; top: 4px;">
+                <svg width="10" height="10" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" class="right-arrow" style="transform: rotate(90deg);"><rect x="10" y="10" rx="5" ry="5" width="35" height="10" style="transform: rotate(45deg); transform-origin: center;"/><rect x="10" y="30" rx="5" ry="5" width="35" height="10" style="transform: rotate(135deg); transform-origin: center;"/></svg>
+            </span>
+        </a>
+        <a id="reload" class="a-link" style="margin-left: 70px;">
+            <span>重启服务</span>
+        </a>
+    </div>
     <div class="setting-title">主题</div>
     <div class="host" style="margin: 0 25px;height: 40px;">
         <div class="button-host" id="btn14">
@@ -225,6 +235,17 @@
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="dynamicSwitch">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn16">
+            <span class="tooltip">up表情
+                <span class="tooltiptext tooltiptext-left tooltiptext-top">开启后会在视频、动态等页面表情框中显示该up设置的up表情包（详见手机APP）。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="commentEmoji">
                     <label></label>
                 </div>
             </section>
