--- a/readme.html
+++ b/readme.html
@@ -26,19 +26,15 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.13来啦 <br>
+        rua豹器5.14来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.13 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.14 特性：</h3>
     <ul>
-        <li>已为MV3加入"重启服务"功能，当通知推送不正常或延迟很大时可以尝试重启服务。MV2只需在扩展管理页面关闭扩展后再开启即可，此方法MV3无效。</li>
-        <li>现在评论区和移动端一样可以发送up大表情了。可在设置中开启/关闭，默认开启。如果遇到评论区表情区显示不正确或是不显示或者表情按钮无响应等问题在设置中关闭"up表情"后刷新页面即可。</li>
-        <li>现在支持b站深色模式了，可在插件设置中开启，可选深色模式和跟随系统自动切换模式。</li>
-        <ul>
-            <li>目前已适配主站主页、视频、专栏、个人主页、动态首页、动态页、消息中心、直播等常用页面。</li>
-            <li>注：插件的深色模式优先级高于直播间-"实验室"中的深色模式。所以在插件的深色模式开启时或者设置为跟随系统且系统处于深色模式时，直播间-"实验室"中的深色模式开关将失效。</li>
-        </ul>
+        <li>修复了评论区表情包显示问题。</li>
+        <li>为视频、番剧、专栏的更新通知单独添加了开关。</li>
+        <li>改进了通知策略，修复了动态页可能会显示"加载失败"的问题。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
@@ -180,6 +176,13 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.14</h3>
+    <ul>
+        <li>修复了评论区表情包显示问题。</li>
+        <li>为视频、番剧、专栏的更新通知单独添加了开关。</li>
+        <li>改进了通知策略，修复了动态页可能会显示"加载失败"的问题。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.13</h3>
     <ul>
         <li>已为MV3加入"重启服务"功能，当通知推送不正常或延迟很大时可以尝试重启服务。MV2只需在扩展管理页面关闭扩展后再开启即可，此方法MV3无效。</li>
