--- a/readme.html
+++ b/readme.html
@@ -33,6 +33,7 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.14 特性：</h3>
     <ul>
         <li>修复了评论区表情包显示问题。</li>
+        <li>修复了没有杜比全景声的视频下显示杜比全景声下载的问题。</li>
         <li>为视频、番剧、专栏的更新通知单独添加了开关。</li>
         <li>改进了通知策略，修复了动态页可能会显示"加载失败"的问题。</li>
         <li>一些其他改进。</li>
