add checkin switch for each liver

--- a/notifySetting.html
+++ b/notifySetting.html
@@ -27,14 +27,17 @@
         <div class="rua-setting-user-info">
             <div class="user-name"><b style="margin-left: 25px">你关注的UP</b></div>
         </div>
-        <div class="rua-setting-button-group" style="width: 310px; margin-right: -12px; justify-content: space-evenly;">
-            <div>
+        <div class="rua-setting-button-group" style="margin-right: 20px; justify-content: space-evenly;">
+            <div style="width: 95px; text-align: center;">
+                <span>打卡</span>
+            </div>
+            <div style="width: 95px; text-align: center;">
                 <span>开播</span>
             </div>
-            <div>
+            <div style="width: 95px; text-align: center;">
                 <span>视频投稿</span>
             </div>
-            <div>
+            <div style="width: 95px; text-align: center;">
                 <span>动态</span>
             </div>
         </div>
