add danmaku emoji, add live source auto-reconnection

--- a/liveroom.html
+++ b/liveroom.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>rua豹器 放映室</title>
     <link href="./css/colors.min.css" type="text/css" rel="stylesheet">
-    <link href="./css/liveroom.css" type="text/css" rel="stylesheet">
+    <link href="./css/liveroom.min.css" type="text/css" rel="stylesheet">
     <script src="./js/flv.min.js"></script>
 </head>
 <body>
@@ -28,7 +28,7 @@
             <div class="panel-title">添加直播</div>
             <div class="room-id-input">
                 <div class="room-input-title">房间号</div>
-                <div class="room-input"><input type="text" placeholder="支持长短号，一次添加一个，按回车键添加"></div>
+                <div class="room-input"><input type="text" placeholder="支持长短号，一次添加一个，按回车键添加"><div style="overflow: hidden"><span class="error-msg"></span></div></div>
             </div>
             <div class="following-room">
                 <div class="following-block-title">上工中的主包：</div>
