add liveroom heartbeat

--- a/liveroom.html
+++ b/liveroom.html
@@ -6,6 +6,7 @@
     <link href="./css/colors.min.css" type="text/css" rel="stylesheet">
     <link href="./css/liveroom.min.css" type="text/css" rel="stylesheet">
     <script src="./js/flv.min.js"></script>
+    <script src="./js/crypto-js.min.js"></script>
 </head>
 <body>
 <main>
