fixed the setting page scroll issue, improved hb features

--- a/notifySetting.html
+++ b/notifySetting.html
@@ -29,6 +29,9 @@
         </div>
         <div class="rua-setting-button-group" style="margin-right: 20px; justify-content: space-evenly;">
             <div style="width: 95px; text-align: center;">
+                <span>挂机</span>
+            </div>
+            <div style="width: 95px; text-align: center;">
                 <span>打卡</span>
             </div>
             <div style="width: 95px; text-align: center;">
