--- a/popup.html
+++ b/popup.html
@@ -141,7 +141,7 @@
         </div>
         <div class="button-host" id="daka">
             <span class="tooltip">自动打卡
-                <span class="tooltiptext tooltiptext-right">开启后每日自动在直播间打卡</span>
+                <span class="tooltiptext tooltiptext-right">开启后每日自动在直播间打卡。可在"更多设置"中指定打卡的直播间。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
@@ -157,6 +157,17 @@
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="medal">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn20">
+            <span class="tooltip">挂机
+                <span class="tooltiptext tooltiptext-right">开启后会在有牌子的主播开播是开始挂机，每天1500亲密度到手！可在"更多设置"中指定挂机的直播间。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="hb">
                     <label></label>
                 </div>
             </section>
