add cover when download audio

--- a/popup.html
+++ b/popup.html
@@ -205,7 +205,7 @@
         </div>
     </div>
     <div class="setting-title">主站相关</div>
-    <div class="host" style="margin: 0 25px;height: 40px;">
+    <div class="host" style="margin: 0 25px;height: 80px;">
         <div class="button-host" id="btn5">
             <span class="tooltip">B币兑换
                 <span class="tooltiptext tooltiptext-left">自动兑换大会员的每月5B币</span>
@@ -224,6 +224,17 @@
             <section class="button">
                 <div class="checkbox">
                     <input type="checkbox" id="commentEmoji">
+                    <label></label>
+                </div>
+            </section>
+        </div>
+        <div class="button-host" id="btn21">
+            <span class="tooltip">方形封面
+                <span class="tooltiptext tooltiptext-left">缓存up头像作为音频封面，针对某些软件无法正常显示长方形封面。</span>
+            </span>
+            <section class="button">
+                <div class="checkbox">
+                    <input type="checkbox" id="album-cover">
                     <label></label>
                 </div>
             </section>
