--- a/readme.html
+++ b/readme.html
@@ -26,17 +26,15 @@
     <h1>b站助手rua豹器 使用说明</h1>
     <p>
         rua豹使人快乐，rua了又rua！<br><br>
-        rua豹器5.14来啦 <br>
+        rua豹器5.15来啦 <br>
         兼容绝大多数chromium内核浏览器，例如：Opera浏览器，360浏览器，新MS Edge，yandex....。<br>
         现已支持火狐浏览器，见：<a href="https://addons.mozilla.org/zh-CN/firefox/addon/rua%E8%B1%B9%E5%99%A8/">火狐扩展商店</a>
     </p>
-    <h3 style="font-size: 28px" id="new-features">ver 5.14 特性：</h3>
+    <h3 style="font-size: 28px" id="new-features">ver 5.15 特性：</h3>
     <ul>
-        <li>下载添加了非HDR、8K视频的DASH协议支持，添加了杜比视界的支持。</li>
-        <li>修复了评论区表情包显示问题。</li>
-        <li>修复了没有杜比全景声的视频下显示杜比全景声下载的问题。</li>
-        <li>为视频、番剧、专栏的更新通知单独添加了开关。</li>
-        <li>改进了通知策略，修复了动态页可能会显示"加载失败"的问题。</li>
+        <li>添加了放映室功能。可以同屏观看16场直播啦！</li>
+        <li>添加了挂机功能，关注且有牌子的主播开播时会在后台挂机来换取亲密度，而且不需要打卡直播间。</li>
+        <li>现在缓存音频有封面了。（如果你用iPhone并且想你在那灵动岛上灵动地显示封面，那么b站视频常用的长方形封面不能正常显示需要正方形的图片。。。天才水果：））</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
