add cover cropping

--- a/readme.html
+++ b/readme.html
@@ -34,7 +34,7 @@
     <ul>
         <li>添加了放映室功能。可以同屏观看16场直播啦！</li>
         <li>添加了挂机功能，关注且有牌子的主播开播时会在后台挂机来换取亲密度，而且不需要打卡直播间。</li>
-        <li>现在缓存音频有封面了。（如果你用iPhone并且想你在那灵动岛上灵动地显示封面，那么b站视频常用的长方形封面不能正常显示需要正方形的图片。。。天才水果：））</li>
+        <li>现在缓存音频有封面了。（如果你用iPhone并且想你在那灵动岛上灵动地显示封面，那么b站视频常用的长方形封面不能正常显示需要正方形的图片。。。天才水果：），但是你可以在插件设置里把"封面裁切"打开， 开启后封面会从图像中心将原图裁切为正方形。）</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
