--- a/popup.html
+++ b/popup.html
@@ -229,8 +229,8 @@
             </section>
         </div>
         <div class="button-host" id="btn21">
-            <span class="tooltip">方形封面
-                <span class="tooltiptext tooltiptext-left">缓存up头像作为音频封面，针对某些软件无法正常显示长方形封面。</span>
+            <span class="tooltip">封面裁切
+                <span class="tooltiptext tooltiptext-left">缓存音频时将封面裁切为1:1比例，针对某些软件无法正常显示长方形封面。</span>
             </span>
             <section class="button">
                 <div class="checkbox">
