--- a/liveroom.html
+++ b/liveroom.html
@@ -127,6 +127,6 @@
         </div>
     </div>
 </main>
-<script src="./js/liveroom.js"></script>
+<script src="./js/liveroom.min.js"></script>
 </body>
 </html>
