update read me files

--- a/liveroom.html
+++ b/liveroom.html
@@ -104,13 +104,13 @@
                         <option value="0">自动</option>
                     </select>
                 </div>
-                <div class="setting-container">
-                    <div class="setting-name">
-                        <span>重连次数</span>
-                        <span>遇到无法加载时的重试次数， 超过次数时将放弃加载。设置值小于0时将会一直尝试加载直到成功加载。<br>但是有些主播下播会直接断开推流不通过b站api下播，这种情况会导致一直重复无意义的加载，不过可以手动关闭直播间。</span>
-                    </div>
-                    <input type="text" class="quality-chosen" value="10" id="setting-re-try">
-                </div>
+<!--                <div class="setting-container">-->
+<!--                    <div class="setting-name">-->
+<!--                        <span>重连次数</span>-->
+<!--                        <span>遇到无法加载时的重试次数， 超过次数时将放弃加载。设置值小于0时将会一直尝试加载直到成功加载。<br>但是有些主播下播会直接断开推流不通过b站api下播，这种情况会导致一直重复无意义的加载，不过可以手动关闭直播间。</span>-->
+<!--                    </div>-->
+<!--                    <input type="text" class="quality-chosen" value="10" id="setting-re-try">-->
+<!--                </div>-->
                 <div class="setting-container">
                     <div class="setting-name">
                         <span>发送心跳包</span>
