--- a/notifySetting.html
+++ b/notifySetting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="current-version" content="5.10">
-    <title>rua豹器 通知偏好</title>
+    <title>rua豹器 偏好设置</title>
     <link href="css/readme.min.css" type="text/css" rel="stylesheet">
     <link href="css/setting.min.css" type="text/css" rel="stylesheet">
     <link href="css/popupbtn.min.css" type="text/css" rel="stylesheet">
