--- a/readme.html
+++ b/readme.html
@@ -33,8 +33,8 @@
     <h3 style="font-size: 28px" id="new-features">ver 5.15 特性：</h3>
     <ul>
         <li>添加了放映室功能。可以同屏观看16场直播啦！</li>
-        <li>添加了挂机功能，关注且有牌子的主播开播时会在后台挂机来换取亲密度，而且不需要打卡直播间。</li>
-        <li>现在缓存音频有封面了。（如果你用iPhone并且想你在那灵动岛上灵动地显示封面，那么b站视频常用的长方形封面不能正常显示需要正方形的图片。。。天才水果：），但是你可以在插件设置里把"封面裁切"打开， 开启后封面会从图像中心将原图裁切为正方形。）</li>
+        <li>添加了挂机功能，关注且有牌子的主播开播时会在后台挂机来换取亲密度，而且不需要打开直播间。</li>
+        <li>现在缓存音频有封面了。默认会将封面裁切为正方形，可以在设置中关闭。</li>
         <li>一些其他改进。</li>
     </ul>
     <h2 id="functions">已有的功能</h2>
@@ -57,6 +57,8 @@
         <li>音乐播放器页面下载。</li>
         <li>深色模式。</li>
         <li>评论区up表情包。</li>
+        <li>放映室</li>
+        <li>挂机经验</li>
     </ul>
     <h2 id="MV3">Manifest V3</h2>
     自5.10版开始rua豹器已开始转为Manifest V3扩展应用。
@@ -148,6 +150,29 @@
                 </ul>
             </div>
         </div>
+        <h3>放映室</h3>
+        <div class="img-block">
+            <img class="img-dark" src="./images/readme/cinema_dark.webp" width="70%" height="70%">
+            <img class="img-light" src="./images/readme/cinema_light.webp" width="70%" height="70%">
+            <div class="info-block">
+                <p>说明：</p>
+                <ul>
+                <li>最多同屏可以开16个直播。</li>
+                <li>暂时不支持弹幕渲染，以后看情况加。</li>
+                <li>主播下播后会自动关闭并回收对应的视频和控件。<br>但是有时主播会直接停止推流而不关闭直播，这种情况需要用过关闭直播键关闭推流。当然不管它也行，过几分钟b站会自动下播，但是在b站自动下播前会一直尝试重连。</li>
+                </ul>
+                <p>操作说明：</p>
+                <ol>
+                    <li>音量</li>
+                    <li>刷新直播流</li>
+                    <li>追帧，如果要缩小延迟可以试试这个（并不能100%解决延迟，只能减少本地延迟，不能解决从主播到服务器的延迟也不可能解决</li>
+                    <li>关闭直播间</li>
+                    <li>设置</li>
+                    <li>添加新的直播到放映室</li>
+                    <li>进入/退出全屏</li>
+                </ol>
+            </div>
+        </div>
     </div>
 
 
@@ -176,6 +201,13 @@
 
     <br/>
     <h2 id="version">版本记录</h2>
+    <h3>ver 5.15</h3>
+    <ul>
+        <li>添加了放映室功能。可以同屏观看16场直播啦！</li>
+        <li>添加了挂机功能，关注且有牌子的主播开播时会在后台挂机来换取亲密度，而且不需要打开直播间。</li>
+        <li>现在缓存音频有封面了。默认会将封面裁切为正方形，可以在设置中关闭。</li>
+        <li>一些其他改进。</li>
+    </ul>
     <h3>ver 5.14</h3>
     <ul>
         <li>下载添加了非HDR、8K视频的DASH协议支持，添加了杜比视界的支持。</li>
