--- a/readme.html
+++ b/readme.html
@@ -393,6 +393,12 @@
         <li>Copyright (c) 2020 Zac Yu, ruo</li>
         <li>License: <a href="https://github.com/bilibili-helper/bilibili-helper-o/blob/master/LICENSE" target="_blank">github.com/bilibili-helper/bilibili-helper-o/blob/master/LICENSE</a></li>
     </ul>
+    <h3>mpegts.js</h3>
+    <ul>
+        <li>mpegts.js <a href="https://github.com/xqq/mpegts.js" target="_blank">github.com/xqq/mpegts.js</a></li>
+        <li>Copyright (c) mpegts.js developers and contributors</li>
+        <li>License: <a href="https://github.com/xqq/mpegts.js/blob/master/LICENSE" target="_blank">github.com/xqq/mpegts.js/blob/master/LICENSE</a></li>
+    </ul>
 </div>
 <div id="bottom">
     <h2></h2>
